Finalize the setup of the documentation. For the moment, just add docstrings in the code itself, like in models.py:SingleObject.isOwner, that will be used to generate the documentation. I will set up a little README in documentation/ explaining how to generate and view the docs.

--- a/.gitignore
+++ b/.gitignore
@@ -115,5 +115,5 @@ media/
 # !**/migrations
 !**/migrations/__init__.py
 
-documentation/test_docs/site
-documentation/api_docs/site
+documentation/site
+documentation/docs/sources
