Fixed the requirement for the __init__ method, which is no more needed to generate documentation.

--- a/documentation/mkgendocs.yml
+++ b/documentation/mkgendocs.yml
@@ -5,8 +5,10 @@ version: master                               #link to sources on github
 
 pages:
   - page: "api/single_object.md"
-    source: "../../lenses/models.py"
+    source: "../lenses/models.py"
     classes:
+      - Users
       - SingleObject
+      - SledGroups
 
   
