--- a/misc/requirements.txt
+++ b/misc/requirements.txt
@@ -6,6 +6,8 @@ cycler==0.10.0
 distlib==0.3.1
 Django==3.2.3
 django-guardian==2.3.0
+django-crispy-forms=1.13.0
+django-notifications-hq=1.6.0
 kiwisolver==1.3.1
 matplotlib==3.4.2
 numpy==1.20.3
