Changed the configuration to use symbolic links for the sensitive database scripts. Fixed the problem with some points lying outside the check_radius on the plot.

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,6 @@ documentation/site
 documentation/docs/sources
 tests/*/*.pdf
 tests/*/*.png
+drop_all_tables.sh
+function_distance_on_sky.sql
+mysite/my.cnf
