--- a/misc/requirements.txt
+++ b/misc/requirements.txt
@@ -6,8 +6,9 @@ cycler==0.10.0
 distlib==0.3.1
 Django==3.2.3
 django-guardian==2.3.0
-django-crispy-forms=1.13.0
-django-notifications-hq=1.6.0
+django-crispy-forms==1.13.0
+django-notifications-hq==1.6.0
+django-multiselectfield==0.1.12
 kiwisolver==1.3.1
 matplotlib==3.4.2
 numpy==1.20.3
