Correctly updated misc/requirements.txt; also updated the py3env environment to reflect this on the django server

--- a/misc/requirements.txt
+++ b/misc/requirements.txt
@@ -1,65 +1,59 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-appnope=0.1.2=pypi_0
-asgiref=3.3.4=pypi_0
-astropy=4.2.1=pypi_0
-backcall=0.2.0=pypi_0
-bzip2=1.0.8=h0d85af4_4
-ca-certificates=2020.12.5=h033912b_0
-certifi=2020.12.5=py37hf985489_1
-configparser=5.0.2=pypi_0
-confusable-homoglyphs=3.2.0=pypi_0
-cycler=0.10.0=pypi_0
-decorator=5.0.9=pypi_0
-django=3.2.3=pypi_0
-django-appconf=1.0.5=pypi_0
-django-crispy-forms=1.12.0=pypi_0
-django-enumfields=2.1.1=pypi_0
-django-guardian=2.3.0=pypi_0
-django-model-utils=4.1.1=pypi_0
-django-multiselectfield=0.1.12=pypi_0
-django-notifications-hq=1.6.0=pypi_0
-django-registration=3.2=pypi_0
-django-select2=7.7.3=pypi_0
-djangorestframework=3.12.4=pypi_0
-ipython=7.25.0=pypi_0
-ipython-genutils=0.2.0=pypi_0
-jedi=0.18.0=pypi_0
-jsonfield=3.1.0=pypi_0
-kiwisolver=1.3.1=pypi_0
-libcxx=11.1.0=habf9029_0
-libffi=3.2.1=hb1e8313_1007
-matplotlib=3.4.2=pypi_0
-matplotlib-inline=0.1.2=pypi_0
-mysqlclient=2.0.3=pypi_0
-ncurses=6.2=h2e338ed_4
-numpy=1.20.3=pypi_0
-openssl=1.1.1k=h0d85af4_0
-parso=0.8.2=pypi_0
-pexpect=4.8.0=pypi_0
-pickleshare=0.7.5=pypi_0
-pillow=8.2.0=pypi_0
-pip=21.1.1=pyhd8ed1ab_0
-prompt-toolkit=3.0.19=pypi_0
-ptyprocess=0.7.0=pypi_0
-pyerfa=1.7.3=pypi_0
-pygments=2.9.0=pypi_0
-pyparsing=2.4.7=pypi_0
-python=3.7.3=h5c2c468_2
-python-dateutil=2.8.1=pypi_0
-python_abi=3.7=1_cp37m
-pytz=2021.1=pypi_0
-readline=8.1=h05e3726_0
-setuptools=49.6.0=py37hf985489_3
-six=1.16.0=pypi_0
-sqlite=3.35.5=h44b9ce1_0
-sqlparse=0.4.1=pypi_0
-swapper=1.1.2.post1=pypi_0
-tk=8.6.10=h0419947_1
-traitlets=5.0.5=pypi_0
-typing-extensions=3.10.0.0=pypi_0
-wcwidth=0.2.5=pypi_0
-wheel=0.36.2=pyhd3deb0d_0
-xz=5.2.5=haf1e3a3_1
-zlib=1.2.11=h7795811_1010
+appdirs==1.4.4
+appnope==0.1.2
+asgiref==3.3.4
+astropy==4.2.1
+backcall==0.2.0
+bayesvp==0.2.5
+Brotli==1.0.9
+certifi==2020.12.5
+configparser==5.0.2
+confusable-homoglyphs==3.2.0
+cycler==0.10.0
+decorator==5.0.9
+discum==1.2.1
+distlib==0.3.1
+Django==3.2.3
+django-appconf==1.0.5
+django-crispy-forms==1.12.0
+django-enumfields==2.1.1
+django-guardian==2.3.0
+django-model-utils==4.1.1
+django-multiselectfield==0.1.12
+django-notifications-hq==1.6.0
+django-registration==3.2
+django-select2==7.7.3
+djangorestframework==3.12.4
+filetype==1.0.7
+ipython==7.25.0
+ipython-genutils==0.2.0
+jedi==0.18.0
+jsonfield==3.1.0
+kiwisolver==1.3.1
+kombine==0.8.4
+matplotlib==3.4.2
+matplotlib-inline==0.1.2
+mysqlclient==2.0.3
+numpy==1.20.3
+panstamps==0.5.1
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.2.0
+prompt-toolkit==3.0.19
+ptyprocess==0.7.0
+pyerfa==1.7.3
+Pygments==2.9.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
+random-user-agent==1.0.1
+requests-toolbelt==0.9.1
+six==1.16.0
+sklearn==0.0
+sqlparse==0.4.1
+swapper==1.1.2.post1
+traitlets==5.0.5
+typing-extensions==3.10.0.0
+ua-parser==0.10.0
+wcwidth==0.2.5
+websocket-client==0.59.0
