--- a/misc/requirements.txt
+++ b/misc/requirements.txt
@@ -15,6 +15,7 @@ Django==3.2.3
 django-appconf==1.0.5
 django-crispy-forms==1.12.0
 django-enumfields==2.1.1
+django-gm2m==1.1.1
 django-guardian==2.3.0
 django-model-utils==4.1.1
 django-multiselectfield==0.1.12
