Modified the url for a lens detail page. Checked that users cannot access private lenses just by typing the id in the url.

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,5 @@ function_distance_on_sky.sql
 mysite/my.cnf
 trial_sample/images/
 lenses/static/lenses/mugshots/*.png
+static/css/*
+static/js/*
