Added CDN for jquery and bootstrap.

--- a/.gitignore
+++ b/.gitignore
@@ -126,4 +126,5 @@ trial_sample/images/
 lenses/static/lenses/mugshots/*.png
 static/css/*
 static/js/*
+!static/js/jquery.bootstrap.modal.forms.js
 static/icons/*
