First functional version of the tooltip for the actions.

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,4 @@ trial_sample/images/
 lenses/static/lenses/mugshots/*.png
 static/js/*
 !static/js/jquery.bootstrap.modal.forms.js
+static/css/vendors/*
