--- a/run_dev_server/requirements_4.2.txt
+++ b/run_dev_server/requirements_4.2.txt
@@ -4,6 +4,7 @@ django-ajax-selects==1.3.5
 django-appconf==1.0.5
 django-bootstrap-modal-forms==3.0.4
 django-crispy-forms==2.1
+crispy-bootstrap4
 django-dirtyfields==1.9.2
 django-gm2m==1.2.0
 django-guardian==2.4.0
@@ -15,6 +16,7 @@ django-notifications-hq==1.8.0
 django-select2==8.1.2
 django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
+django-simple-captcha==0.6.0
 django-storages[s3]
 boto3==1.23.10
 astropy==6.0.1
