--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@ mysite/wsgi.py.*
 run_dev_server/docker-compose-mine.yaml*
 mysite/sled-envvars.py
 
+
+# Environment file - added 6/3/24 by Lawrence Levinson (llevinson@amnh.org)
+mysite/.env
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
