--- a/run_dev_server/requirements_4.2.txt
+++ b/run_dev_server/requirements_4.2.txt
@@ -18,6 +18,9 @@ django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
 django-simple-captcha==0.6.0
 django-storages[s3]
+django-axes[ipware]==6.4.0
+django-csp==3.8
+django-resized==1.0.2
 boto3==1.23.10
 astropy==6.0.1
 ads==0.12.3
@@ -29,6 +32,4 @@ whitenoise==5.3.0
 requests>=2.27.1
 langdetect>=1.0.9
 alt-profanity-check>=1.4.2
-django-axes[ipware]==6.4.0
-django-csp==3.8
 python-dotenv==1.0.1
