--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 automated_scripts/cron_file.txt
 mysite/wsgi.py.*
 run_dev_server/docker-compose-mine.yaml*
+run_dev_server/docker-compose-cat.yaml*
 mysite/sled-envvars.py
 
 # Environment file - added 6/3/24 by Lawrence Levinson (llevinson@amnh.org)
