--- a/run_dev_server/requirements_4.2.txt
+++ b/run_dev_server/requirements_4.2.txt
@@ -35,4 +35,9 @@ requests>=2.27.1
 langdetect>=1.0.9
 alt-profanity-check>=1.4.2
 python-dotenv==1.0.1
+numpy>=1.20.3
+scipy>=1.6.3
+jsonpickle>=2.0.0
+pandas>=1.3.5
 coolest
+
