--- a/run_dev_server/requirements_4.2.txt
+++ b/run_dev_server/requirements_4.2.txt
@@ -38,6 +38,12 @@ python-dotenv==1.0.1
 numpy>=1.20.3
 scipy>=1.6.3
 jsonpickle>=2.0.0
-pandas>=1.3.5
+pandas>=1.3.5,<2.3.0
+matplotlib>=3.2
+getdist>=1.3.4
+corner
+emcee
+dynesty
+scikit-image
 coolest
 
